# sel_practice_stepik

./: 3_4_4.py  3_4_5.py  3_4_6.py  pyproject.toml
