[tool.poetry]
name = "sel-practice-stepik"
version = "0.1.0"
description = ""
authors = ["Ivan <ivkedrov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
